doc: adds definition

--- a/Bike_renting.ipynb
+++ b/Bike_renting.ipynb
@@ -1,6 +1,74 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Capstone Project\n",
+    "Machine Learning Engineer Nanodegree\n",
+    "\n",
+    "# Demand prediction for a bike sharing systems\n",
+    "\n",
+    "Mai 2016  \n",
+    "Philipp Vogler  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Definition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Project Overview  \n",
+    "\n",
+    "- Utelizing machine learning to forecast the demand for the washington DC bike sharing system 'capital bike share'  \n",
+    "- Using different types of regression to find an algorithem to predict the demand for bikes based on calenderic and weather information.  \n",
+    "- Weather, calendaric and demand information is provided in a dataset by the University of Porto at UCI ML Repository.  \n",
+    "- This project tries to create a forecasting function based on two years of historic data by utelizing the machine learning libraries scikit-learn and tensor-flow.  \n",
+    "\n",
+    "> http://www.capitalbikeshare.com   \n",
+    "> http://archive.ics.uci.edu/ml/datasets/Bike+Sharing+Dataset  \n",
+    "> http://freemeteo.de/wetter/  \n",
+    "> http://dchr.dc.gov/page/holiday-schedules  \n",
+    "> http://scikit-learn.org/stable/  \n",
+    "> https://www.tensorflow.org  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem Statement  \n",
+    "\n",
+    "The goal is to forecast the demand of bikes in in dependency of weather conditions like outside temperature and calendaric informations e.g. holidays. These information and the demand structure is provided in a set with two years of dayly historic data.  \n",
+    "The demand is given as the total dayly demand and as a split for registered users and casual users. To increase the quality of the prediction registered user demand and casual user demand will be predicted seperatly in step two.  \n",
+    "To make predictions machnie learning is used to train regressors. Scikit-Learn recomands a support vector regressor (SVR) for this kind of problem and dataset. In addition a deep neuronal network (DNN) regressor is trained for comparison. To find the hyperparameters for these regressors grid search and ramdomized search are utelized. Due to the small dataset cross validation is applied.  \n",
+    "\n",
+    "> http://scikit-learn.org/stable/tutorial/machine_learning_map/index.html  \n",
+    "> http://scikit-learn.org/stable/modules/generated/sklearn.svm.SVR.html#sklearn.svm.SVR  \n",
+    "> https://github.com/tensorflow/skflow/blob/master/g3doc/api_docs/python/estimators.md  \n",
+    "> http://scikit-learn.org/stable/modules/generated/sklearn.grid_search.GridSearchCV.html  \n",
+    "> http://scikit-learn.org/stable/modules/generated/sklearn.grid_search.RandomizedSearchCV.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Metrics\n",
+    "\n",
+    "To mesure the performance of the regressions two standard regression metrics are used: Mean squared eror (MSE) and the coefficient of determination (R^2). Both metrics are calculated for both regressor types. For quality comparison and parameter tuneing only R^2 is used due to the better readability.\n",
+    "\n",
+    "> http://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html#sklearn.metrics.mean_squared_error  \n",
+    "> http://scikit-learn.org/stable/modules/generated/sklearn.metrics.r2_score.html#sklearn.metrics.r2_score  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
