doc: adds analysis and methodology

--- a/Bike_renting.ipynb
+++ b/Bike_renting.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "### Metrics\n",
     "\n",
-    "To mesure the performance of the regressions two standard regression metrics are used: Mean squared eror (MSE) and the coefficient of determination (R^2). Both metrics are calculated for both regressor types. For quality comparison and parameter tuneing only R^2 is used due to the better readability.\n",
+    "To mesure the performance of the regressions two standard regression metrics are used: Mean squared eror (MSE) and the coefficient of determination (R^2). Both metrics are calculated for both regressor types. For comparison and parameter tuneing only R^2 is used due to the better readability.\n",
     "\n",
     "> http://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html#sklearn.metrics.mean_squared_error  \n",
     "> http://scikit-learn.org/stable/modules/generated/sklearn.metrics.r2_score.html#sklearn.metrics.r2_score  "
@@ -90,6 +90,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -110,6 +117,13 @@
     "bike_data = pd.read_csv(\"day.csv\")\n",
     "\n",
     "print \"Data read successfully!\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Exploration"
    ]
   },
   {
@@ -140,8 +154,8 @@
     "\n",
     "feature_cols = bike_data.columns[:-3]  # all columns but last are features\n",
     "target_col = bike_data.columns[-1]  # last column is the target\n",
-    "print \"Feature column(s):\\n{}\\n\".format(feature_cols)\n",
-    "print \"Target column:\\n{}\".format(target_col)"
+    "print (\"Feature column(s):\\n{}\\n\".format(feature_cols))\n",
+    "print (\"Target column:\\n{}\".format(target_col))"
    ]
   },
   {
@@ -396,14 +410,26 @@
     "print \"\\n Data values:\"\n",
     "print bike_data.head()  # print the first 5 rows\n",
     "\n",
-    "bike_data.describe()"
+    "bike_data.describe() # shows stats "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data is already normalized"
+    "#### Characteristics\n",
+    "\n",
+    "Most of the data is already normalized or binary.  \n",
+    "The dataset is very concise and missing values are not a problem. Categorical data like weekday or workingday are already processed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Preprocessing (Methodology)\n",
+    "\n",
+    "Dates get droped because the regressor can not read this datatype and the order information is already stored in the index. The instant variable replicates this information also. "
    ]
   },
   {
@@ -421,16 +447,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Split\n",
+    "### Exploratory Visualization\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y)# test size is set to 0.25"
+    "The visualiation shows a classic seasonal pattern with a up trend year over year. There are so outliers."
    ]
   },
   {
@@ -449,12 +471,49 @@
     "plt.plot(bike_data.cnt,'bo')\n",
     "\n",
     "plt.title('Number of bikes rented per day')\n",
-    "plt.xlabel('days')\n",
+    "plt.xlabel('Days')\n",
     "plt.ylabel('Number of bikes')\n",
     "\n",
     "plt.show()\n",
     "\n",
     "# source: http://matplotlib.org/examples/showcase/bachelors_degrees_by_gender.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Algorithms and Techniques"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)# test size is set to 0.25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two types of regressors are trained. A SVR and a DNN-Regressor. Both are first used \"of the shelf\" with default parameters to create a benchmark.\n",
+    "\n",
+    "> http://scikit-learn.org/stable/modules/generated/sklearn.svm.SVR.html#sklearn.svm.SVR  \n",
+    "> https://github.com/tensorflow/skflow/blob/master/g3doc/api_docs/python/estimators.md  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Benchmark"
    ]
   },
   {
@@ -506,75 +565,6 @@
     "# score_svr = mean_squared_error(y_test, svr_pred)\n",
     "score_svr = r2_score(y_test, svr_pred)\n",
     "\n",
-    "print(\"Score SVR: %f\" % score_svr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GridSearchCV(cv=None, error_score='raise',\n",
-      "       estimator=SVR(C=1, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='auto',\n",
-      "  kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False),\n",
-      "       fit_params={}, iid=True, n_jobs=1,\n",
-      "       param_grid=[{'kernel': ['linear', 'rbf'], 'C': [0.0001, 0.001, 0.01]}],\n",
-      "       pre_dispatch='2*n_jobs', refit=True, scoring='r2', verbose=0)\n",
-      "\n",
-      "Best parameter from grid search: {'kernel': 'linear', 'C': 0.001}\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Tuning SVR\n",
-    "\n",
-    "tuned_parameters = [{'C': [0.0001, 0.001, 0.01], \n",
-    "                     'kernel': ['linear', 'rbf']}\n",
-    "                   ]\n",
-    "\n",
-    "#svr_tuned = GridSearchCV(SVR (C=1), param_grid = tuned_parameters, scoring = 'mean_squared_error') #default 3-fold cross-validation, score method of the estimator\n",
-    "svr_tuned = GridSearchCV(SVR (C=1), param_grid = tuned_parameters, scoring = 'r2') #default 3-fold cross-validation, score method of the estimator\n",
-    "\n",
-    "svr_tuned.fit(X_train, y_train)\n",
-    "\n",
-    "print (svr_tuned)\n",
-    "print ('\\n' \"Best parameter from grid search: \" + str(svr_tuned.best_params_) +'\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Score SVR tuned: 0.245852\n",
-      "Score SVR: -0.001130\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Validation - SVR tuned \n",
-    "\n",
-    "svr_tuned_pred = svr_tuned.predict(X_test)\n",
-    "\n",
-    "#score_svr_tuned = mean_squared_error(y_test, svr_tuned_pred)\n",
-    "score_svr_tuned = r2_score(y_test, svr_tuned_pred)\n",
-    "\n",
-    "\n",
-    "print(\"Score SVR tuned: %f\" % score_svr_tuned)\n",
     "print(\"Score SVR: %f\" % score_svr)"
    ]
   },
@@ -660,10 +650,10 @@
     "#  See the License for the specific language governing permissions and\n",
     "#  limitations under the License.\n",
     "\n",
-    "from __future__ import absolute_import\n",
-    "from __future__ import division\n",
-    "from __future__ import print_function\n",
-    "from sklearn import preprocessing\n",
+    "#from __future__ import absolute_import\n",
+    "#from __future__ import division\n",
+    "#from __future__ import print_function\n",
+    "#from sklearn import preprocessing\n",
     "\n",
     "# Build 2 layer fully connected DNN with 10, 10 units respectively.\n",
     "regressor = skflow.TensorFlowDNNRegressor(hidden_units=[10,10], steps=5000, learning_rate=0.1, batch_size=1)\n",
@@ -678,6 +668,114 @@
     "print('Score: {0:f}'.format(score_regressor))\n",
     "\n",
     "# source https://github.com/tensorflow/tensorflow/blob/master/tensorflow/examples/skflow/boston.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both \"bench marks\" for the coefficient of determination are very low."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Methodology"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementation\n",
+    "\n",
+    "Afterwards they are trained using randomised search and cross validation to the area of the best parameters. Last a grid search is used to tune parameter values.\n",
+    "\n",
+    "> http://scikit-learn.org/stable/modules/generated/sklearn.grid_search.GridSearchCV.html  \n",
+    "> http://scikit-learn.org/stable/modules/generated/sklearn.grid_search.RandomizedSearchCV.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "randomized search is missing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GridSearchCV(cv=None, error_score='raise',\n",
+      "       estimator=SVR(C=1, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='auto',\n",
+      "  kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False),\n",
+      "       fit_params={}, iid=True, n_jobs=1,\n",
+      "       param_grid=[{'kernel': ['linear', 'rbf'], 'C': [0.0001, 0.001, 0.01]}],\n",
+      "       pre_dispatch='2*n_jobs', refit=True, scoring='r2', verbose=0)\n",
+      "\n",
+      "Best parameter from grid search: {'kernel': 'linear', 'C': 0.001}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tuning SVR\n",
+    "\n",
+    "tuned_parameters = [{'C': [0.0001, 0.001, 0.01], \n",
+    "                     'kernel': ['linear', 'rbf']}\n",
+    "                   ]\n",
+    "\n",
+    "#svr_tuned = GridSearchCV(SVR (C=1), param_grid = tuned_parameters, scoring = 'mean_squared_error') #default 3-fold cross-validation, score method of the estimator\n",
+    "svr_tuned = GridSearchCV(SVR (C=1), param_grid = tuned_parameters, scoring = 'r2') #default 3-fold cross-validation, score method of the estimator\n",
+    "\n",
+    "svr_tuned.fit(X_train, y_train)\n",
+    "\n",
+    "print (svr_tuned)\n",
+    "print ('\\n' \"Best parameter from grid search: \" + str(svr_tuned.best_params_) +'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score SVR tuned: 0.245852\n",
+      "Score SVR: -0.001130\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validation - SVR tuned \n",
+    "\n",
+    "svr_tuned_pred = svr_tuned.predict(X_test)\n",
+    "\n",
+    "#score_svr_tuned = mean_squared_error(y_test, svr_tuned_pred)\n",
+    "score_svr_tuned = r2_score(y_test, svr_tuned_pred)\n",
+    "\n",
+    "print(\"Score SVR tuned: %f\" % score_svr_tuned)\n",
+    "print(\"Score SVR: %f\" % score_svr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The tuneing works but a coeficient of determination of about 25% is still not very good."
    ]
   },
   {
@@ -1611,7 +1709,7 @@
     "# param_grid\n",
     "param_grid = {'hidden_units': [[11,11], [12,12], [13,13], [14,14], [15,15]], \n",
     "              'steps': [100],\n",
-    "              'learning_rate': [1.0, 0.3, 0.1],\n",
+    "              'learning_rate': [1.0, 0.7, 0.3],\n",
     "              'batch_size': [250, 300, 350, 400, 450]\n",
     "             }\n",
     "\n",
@@ -1645,7 +1743,7 @@
     "collapsed": true
    },
    "source": [
-    "Example results of GS tuned DNN Regressor:\n",
+    "Exsample results of GS tuned DNN Regressor:\n",
     "\n",
     "corresponding parameters: {'steps': 100, 'learning_rate': 1.0, 'hidden_units': [13, 13], 'batch_size': 400}\n",
     "MSE: 3275144.565188\n",
@@ -1699,13 +1797,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Split\n",
-    "The count of rented bikes (cnt) is just the sum of the features casual and registered. I build and train two seperate models to predict these features. And add them up afterwards. This should improve the projection."
+    "Same picture with the DNN Regressor. The tueing helps, but the results are still underwelming. Also the best DNN result is no match for the tuned SVR."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Refinement  \n",
+    "The count of rented bikes (cnt) is just the sum of the features casual and registered. Two seperate models are trained to predict these features. And add them up afterwards. This should improve the projection."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1723,15 +1828,7 @@
       "\n",
       "Target column:\n",
       "casual\n",
-      "\n",
-      "GridSearchCV(cv=None, error_score='raise',\n",
-      "       estimator=SVR(C=1, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='auto',\n",
-      "  kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False),\n",
-      "       fit_params={}, iid=True, n_jobs=1,\n",
-      "       param_grid=[{'kernel': ['linear', 'rbf'], 'C': [100, 1000, 10000]}],\n",
-      "       pre_dispatch='2*n_jobs', refit=True, scoring='r2', verbose=0)\n",
-      "\n",
-      "Best parameter from grid search: {'kernel': 'linear', 'C': 1000}\n"
+      "\n"
      ]
     }
    ],
