doc: report for Sub2

--- a/Bike_renting.ipynb
+++ b/Bike_renting.ipynb
@@ -46,9 +46,9 @@
    "source": [
     "### Problem Statement  \n",
     "\n",
-    "The goal is to forecast the demand for bikes in dependency of weather conditions like outside temperature and calendaric informations e.g. holidays. These information and the demand structure is provided in a set with two years of dayly historic data.  \n",
-    "The demand is given as the total dayly demand and as a split for registered users and casual users. To increase the quality of the prediction registered user demand and casual user demand will be predicted seperatly in step two.  \n",
-    "To make predictions machnie learning is used to train regressors. Scikit-Learn recommands a support vector regressor (SVR) for this kind of problem and data amount. In addition a deep neuronal network (DNN) regressor is trained for comparison. To find the hyperparameters for these regressors grid search and ramdomized search are utelized. Due to the small dataset cross validation is applied.  \n",
+    "The goal is to forecast the demand for bikes in dependency of weather conditions like outside temperature and calendric informations e.g. holidays. These information and the demand structure is provided in a set with two years of daily historic data.  \n",
+    "The demand is given as the total daily demand and as a split for registered users and casual users. To increase the quality of the prediction registered user demand and casual user demand will be predicted separately in step two.  \n",
+    "To make predictions machine learning is used to train regressors. Scikit-Learn recommends a support vector regressor (SVR) for this kind of problem and data amount. In addition a deep neuronal network (DNN) regressor is trained for comparison. To find the hyper-parameters for these regressors grid search and randomized search are utilized. Due to the small dataset cross validation is applied.    \n",
     "\n",
     "> http://scikit-learn.org/stable/tutorial/machine_learning_map/index.html  \n",
     "> http://scikit-learn.org/stable/modules/generated/sklearn.svm.SVR.html#sklearn.svm.SVR  \n",
@@ -63,7 +63,7 @@
    "source": [
     "### Metrics\n",
     "\n",
-    "To mesure the performance of the regressions two standard regression metrics are used: Mean squared eror (MSE) and the coefficient of determination (R^2). Both metrics are calculated for both regressor types. For comparison and parameter tuneing only R^2 is used due to the better readability.\n",
+    "To measure the performance of the regressions two standard regression metrics are used: Mean squared eror (MSE) and the coefficient of determination (R^2). Both metrics are calculated for both regressor types. For comparison and parameter tuning only R^2 is used due to the better readability.\n",
     "\n",
     "> http://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html#sklearn.metrics.mean_squared_error  \n",
     "> http://scikit-learn.org/stable/modules/generated/sklearn.metrics.r2_score.html#sklearn.metrics.r2_score  "
@@ -133,7 +133,7 @@
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -529,7 +529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both \"benchmarks\" for the coefficient of determination are very low. Parameter tuneing is mandatory."
+    "Both \"benchmarks\" for the coefficient of determination are very low. Parameter tuning is mandatory."
    ]
   },
   {
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1368,7 +1368,7 @@
       "       param_grid=[{'kernel': ['linear', 'rbf'], 'C': [1, 3, 10, 30, 100, 300, 1000, 3000]}],\n",
       "       pre_dispatch='2*n_jobs', refit=True, scoring='r2', verbose=0)\n",
       "\n",
-      "Best parameter from grid search: {'kernel': 'linear', 'C': 300}\n"
+      "Best parameter from grid search: {'kernel': 'linear', 'C': 1000}\n"
      ]
     }
    ],
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -1418,8 +1418,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best CV score from grid search: 0.652505\n",
-      "corresponding parameters: {'kernel': 'linear', 'C': 3263.1463798458485}\n"
+      "best CV score from grid search: 0.645292\n",
+      "corresponding parameters: {'kernel': 'linear', 'C': 1323.0100277185118}\n"
      ]
     }
    ],
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -1525,8 +1525,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best CV score from grid search: 0.652505\n",
-      "corresponding parameters: {'kernel': 'linear', 'C': 3263.1463798458485}\n"
+      "best CV score from grid search: 0.645292\n",
+      "corresponding parameters: {'kernel': 'linear', 'C': 1323.0100277185118}\n"
      ]
     }
    ],
@@ -1573,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -1582,9 +1582,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score cas: 0.619215\n",
-      "Score reg: 0.774632\n",
-      "Score sum: 0.802635\n"
+      "Score cas: 0.678859\n",
+      "Score reg: 0.819070\n",
+      "Score sum: 0.788147\n"
      ]
     }
    ],
@@ -1613,26 +1613,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVR: -0.031042\n",
-      "SVR tuned grid: 0.798317\n",
-      "SVR tuned RS: 0.802120\n",
-      "\n",
-      "\n",
-      "DNN: -0.082288\n",
-      "DNN tuned grid: 0.138676\n",
-      "DNN tuned random: 0.143749\n",
-      "\n",
-      "\n",
-      "SVR sum: 0.802635\n"
+     "ename": "NameError",
+     "evalue": "name 'score_svr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-e929f3d0317c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SVR: %f\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mscore_svr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SVR tuned grid: %f\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mscore_svr_tuned_GS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SVR tuned RS: %f\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mscore_svr_tuned_RS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'score_svr' is not defined"
      ]
     }
    ],
@@ -1674,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -1719,8 +1713,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- I had high hopes for the DNN Regressor. It was kind of disappointing that it does not even come close. Maybe my tuneing was not right or it needs more data or computaional power.\n",
-    "- Utelizing grid and randomize search in a way that makes sens was a little tricky. It makes more sens to start with a broad grid search and than use randomized search on the given intervall, instead of vis a versa. It is also coputational more efficient."
+    "- I had high hopes for the DNN Regressor. It was kind of disappointing that it does not even come close. Maybe my tuning was not right or it needs more data or computational power.\n",
+    "- Utilizing grid and randomize search in a way that makes sense was a little tricky. It makes more sense to start with a broad grid search and than use randomized search on the given interval, instead of vis a versa. It is also computational more efficient."
    ]
   },
   {
