--- a/Bike_renting.ipynb
+++ b/Bike_renting.ipynb
@@ -71,17 +71,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named tensorflow.contrib",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-695a583c44bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandint\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msp_randint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0muniform\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msp_uniform\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrib\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mskflow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: No module named tensorflow.contrib"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import calendar\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.cross_validation import train_test_split\n",
     "from sklearn.grid_search import GridSearchCV, RandomizedSearchCV\n",
@@ -441,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -452,17 +465,22 @@
     "plt.style.use('ggplot')\n",
     "plt.figure(1)\n",
     "      \n",
-    "plt.plot(bike_data.cnt,'go')\n",
-    "#plt.plot(bike_data.casual,'yx')\n",
-    "#plt.plot(bike_data.registered,'bx')\n",
+    "plt.plot(bike_data.instant[:len(bike_data)/2], bike_data.cnt[:len(bike_data)/2] ,'go', label='2011')\n",
+    "plt.plot(bike_data.instant[:(len(bike_data)/2)+1], bike_data.cnt[len(bike_data)/2:], 'ro', label='2012')\n",
     "\n",
     "plt.title('Number of bikes rented per day')\n",
+    "\n",
     "plt.xlabel('Days')\n",
+    "plt.xticks((np.arange(0,len(bike_data)/2,len(bike_data)/24)), calendar.month_name[1:13], rotation=45)\n",
+    "\n",
     "plt.ylabel('Number of bikes')\n",
+    "\n",
+    "plt.legend(loc='best')\n",
     "\n",
     "plt.show()\n",
     "\n",
-    "# source: http://matplotlib.org/examples/showcase/bachelors_degrees_by_gender.html"
+    "# source: http://matplotlib.org/examples/showcase/bachelors_degrees_by_gender.html\n",
+    "# source: http://matplotlib.org/api/pyplot_api.html?highlight=xticks#matplotlib.pyplot.xticks"
    ]
   },
   {
