Feat: adds to Model Evaluation and Validation

--- a/Bike_renting.ipynb
+++ b/Bike_renting.ipynb
@@ -1496,7 +1496,7 @@
     "svr_tuned_cas_RS.fit(X_train_cas, y_train_cas)\n",
     "\n",
     "# Best score and corresponding parameters.\n",
-    "print('best CV score from grid search: {0:f}'.format(svr_tuned_cas_RS.best_score_))\n",
+    "print('best CV score from random search: {0:f}'.format(svr_tuned_cas_RS.best_score_))\n",
     "print('corresponding parameters: {}'.format(svr_tuned_cas_RS.best_params_))\n",
     "\n",
     "# Predict and score\n",
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -1581,8 +1581,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best CV score from grid search: 0.633508\n",
-      "corresponding parameters: {'kernel': 'linear', 'C': 2242.3044446707327}\n"
+      "best CV score from random search: 0.794217\n",
+      "corresponding parameters: {'kernel': 'linear', 'C': 2732.2436554658093}\n"
      ]
     }
    ],
@@ -1603,8 +1603,8 @@
     "svr_tuned_reg_RS.fit(X_train_reg, y_train_reg)\n",
     "\n",
     "# Best score and corresponding parameters.\n",
-    "print('best CV score from grid search: {0:f}'.format(svr_tuned_cas_RS.best_score_))\n",
-    "print('corresponding parameters: {}'.format(svr_tuned_cas_RS.best_params_))\n",
+    "print('best CV score from random search: {0:f}'.format(svr_tuned_reg_RS.best_score_))\n",
+    "print('corresponding parameters: {}'.format(svr_tuned_reg_RS.best_params_))\n",
     "\n",
     "# Predict and score\n",
     "predict = svr_tuned_reg_RS.predict(X_test)\n",
@@ -1676,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
